// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quiqFetch respects overrides 1`] = `
Object {
  "customProp": "crazy",
  "headers": Object {
    "Accept": "application/json",
    "Content-Type": "application/json",
    "X-Quiq-Client-Id": "Quiq-Chat-Client",
    "X-Quiq-Client-Version": "1.3.1",
    "X-Quiq-Line": "1",
    "customHeader": "hi",
  },
  "method": "GET",
  "mode": "cors",
}
`;

exports[`quiqFetch respects requestType 1`] = `
Object {
  "headers": Object {
    "X-Quiq-Client-Id": "Quiq-Chat-Client",
    "X-Quiq-Client-Version": "1.3.1",
    "X-Quiq-Line": "1",
  },
  "method": "GET",
  "mode": "cors",
}
`;

exports[`quiqFetch transforms data 1`] = `
Object {
  "headers": Object {
    "X-Quiq-Client-Id": "Quiq-Chat-Client",
    "X-Quiq-Client-Version": "1.3.1",
    "X-Quiq-Line": "1",
  },
  "method": "GET",
  "mode": "cors",
}
`;
